# mgck

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  crontab  docker-compose.yml.sample  pyproject.toml  pytest.ini  tailwind.config.js
.github/workflows/: black.yaml  cd.yaml
coreapi/: CoreApi.sln  Database.Dockerfile  Dockerfile
coreapi/CoreApi.WebApi/: CoreApi.WebApi.csproj  CoreApi.WebApi.http  CoreApi.WebApi.sln  Program.cs  appsettings.Development.json
coreapi/CoreApi.WebApi.Tests/: AuthSessionApiTests.cs  CoreApi.WebApi.Tests.csproj  FollowingApiTests.cs  RefreshSessionMigrationTests.cs
coreapi/UserAuth/: Program.cs  UserAuth.http
djangobackend/: Dockerfile  tailwind.config.js
djangobackend/api/: serializers.py  urls.py  views.py
djangobackend/core/: error.py  result.py
djangobackend/djangobackend/: asgi.py  exceptions.py  internal_authentication.py  settings.py  urls.py  wsgi.py
djangobackend/emojify/: apps.py  urls.py  views.py
djangobackend/fileuploader/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djangobackend/gfys/: admin.py  apps.py  models.py  paginator.py  urls.py  utils.py  views.py
djangobackend/kpopcomebacks/: admin.py  apps.py  artist_credit_matches.py  models.py  signals.py  urls.py  utils.py  views.py
djangobackend/milestones/: admin.py  authentication.py  models.py  ownership.py  serializers.py  sync.py  urls.py  utils.py  views.py
frontend/: .dockerignore  Dockerfile  jest.config.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
nginx/: Dockerfile
(+506 files in other folders)
